test/schemas/fail/version_dupes.sat
struct Pos #2 {}

// ERROR: schemas/fail/version_dupes.sat(4): Struct versions overlap with previous declaration: Pos
struct Pos #2 {}

struct Pos #3 {}

// ERROR: schemas/fail/version_dupes.sat(10): Struct versions overlap with previous declaration: Pos
// ERROR: schemas/fail/version_dupes.sat(10): Struct versions overlap with previous declaration: Pos
struct Pos #1..3 {}

struct Pos #4..5 {
    int32 x #4..5;
    // ERROR: schemas/fail/version_dupes.sat(16): Duplicate field: Pos#4.x
    // ERROR: schemas/fail/version_dupes.sat(16): Duplicate field: Pos#5.x
    int32 x #4;
    // ERROR: schemas/fail/version_dupes.sat(18): Duplicate field: Pos#5.x
    int32 x #5;
}

// ERROR: schemas/fail/version_dupes.sat(22): Type already defined: Pos
struct Pos {}

struct Vec {}
// ERROR: schemas/fail/version_dupes.sat(26): Type already defined: Vec
struct Vec#2 {}

// ERROR: schemas/fail/version_dupes.sat(29): Version must be positive: 0
struct Zero#0 {}
